Move to /community/consortium/, see #704

--- a/source/community.html
+++ b/source/community.html
@@ -9,6 +9,11 @@ redirect_from:
 
           {% include institutions.html %}
 
+          <section class="about-content wrapper">
+	    <h2>IIIF Consortium</h2>
+	    <div>The <a href="/community/consortium/">IIIF Consortium</a> (IIIFC) was formed in June 2015 to support and promote the development and deployment of IIIF APIs.</div>
+	  </section>
+
           <section class="get-involved wrapper">
             <h2>How to get involved</h2>
             <div>We welcome any organization or individual interested in adopting the IIIF, developing software to support it, or giving feedback on the effort to join our discussion list at:
